[tool.poetry]
name = "my_krml_24925125"
version = "0.1.7"
description = "A package for doing great things!"
authors = ["Max Serra"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "2.0.3"
scikit-learn = "1.2.2"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"
pytest-cov = "4.1.0"
sphinx = "^5.3.0"
myst-nb = "^0.17.2"
autoapi = "^2.0.1"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
